2010-07-14  Vadim Kurland  <vadim@vk.crocodile.org>

	* DiscoveryDruid.cpp (DiscoveryDruid::loadDataFromImporter):
	fixed #1544 "fwbuilder crashes during import of file with rtf
	formatting data". The fix should prevent crashes in other cases
	when import was unsuccessful.

2010-07-13  Roman Bovsunivskiy <a2k0001@gmail.com>
	* instdialogoptions_q.ui: Added "Cancell All" button to stop all
	firewalls installations, renamed OK button to "Install"
	* instDialog_ui_opts.cpp (instDialog::getInstOptions): added support
	for "Cancel All" dialog result code.

2010-07-12  Roman Bovsunivskiy <a2k0001@gmail.com> 
	* instDialog_ui_opts.cpp (intDialog::fillCompileSelectList): fixed
	wrong display of non-ascii symbols in cluster member compilation
	warning.
	* newFirewallDialog.cpp (newFirewallDialog::showPage): firewall names
	are now resolved to IP address. Added new input element for firewall
	IP address to use for SNMP interface discovery.

2010-07-11  Vadim Kurland  <vadim@vk.crocodile.org>

	* FirewallInstaller.cpp (FirewallInstaller::packSSHArgs): fixed
	bug 3027284: "redux settings for scp/ssh to respond to line
	failure". The solution for bug 3020381 used to force ssh and scp
	commands to use the parameters ServerAliveInterval and
	ConnectTimeout to activate and configure ssh keepalive protocol.
	These command line parameters were enforced and added to the input
	fields where user enters the path to ssh and scp utilities on the
	machine where fwbuilder GUI is running. This was confusing and
	poor GUI design as the program was changing fields that were
	supposed to be user-editable. This fix adds an input field for the
	timeout value in seconds to the "Installer" tab of the global
	preferences dialog. The program does not change strings entered by
	the user for ssh and scp path anymore. The same timeout value is
	used to set up ServerAliveInterval parameter for ssh,
	ConnectTimeout parameter for scp and registry entries required by
	plink and pscp on Windows.
