@@ -430,9 +430,11 @@ void FirewallInstaller::packSCPArgs(const QString &local_name,
     // is read and processed by getDestinationDir()
 
     if (!cnf->user.isEmpty())
-        args.push_back(cnf->user + "@" + mgmt_addr + ":" + remote_name);
+        args.push_back(cnf->user + "@" + mgmt_addr + ":" +
+                       fwcompiler::CompilerDriver::escapeFileName(remote_name));
     else
-        args.push_back(mgmt_addr + ":" + remote_name);
+        args.push_back(mgmt_addr + ":" +
+                       fwcompiler::CompilerDriver::escapeFileName(remote_name));
 }
 
 /*
@@ -611,6 +613,7 @@ QString FirewallInstaller::getFullPath(const QString &file )
     else return file;
 }
 
+
 /*
  * This method builds and returns activation command
  * This method is used for all firewall platforms but PIX
@@ -647,10 +650,59 @@ QString FirewallInstaller::getActivationCmd()
     configlet.setVariable("with_compression",  cnf->compressScript);
     configlet.setVariable("no_compression",  ! cnf->compressScript);
 
-    inst_dlg->replaceMacrosInCommand(&configlet);
+    replaceMacrosInCommand(&configlet);
 
     return configlet.expand().trimmed();
 }
+
+void FirewallInstaller::replaceMacrosInCommand(Configlet *conf)
+{
+/* replace macros in activation commands:
+ *
+ * {{$fwbpromp}}   -- "magic" prompt that installer uses to detect when it is logged in
+ * {{$fwdir}}      -- directory on the firewall
+ * {{$fwscript}}   -- script name on the firewall
+ * {{$rbtimeout}}  -- rollbak timeout
+ */
+
+/*
+ * TODO: it does not make sense to split remote_script and then
+ * reassemble it again from the file name and cnf.fwdir. We should set
+ * variable $remote_script and use it in the configlets instead, but
+ * keep $fwbscript and $fwdir for backwards compatibility
+ */
+
+/*
+ * remote_script is a full path, which in case of Cisco can be
+ * something like "flash:file.fw". This means we have a problem with
+ * QFileInfo that interprets it as path:filename on Window or just
+ * file name with no directory path on Unix. As the result, fwbscript
+ * becomes just "file.fw" on Windows and stays "flash:file.fw" on
+ * Unix.
+ */
+
+    QString fwbscript = fwcompiler::CompilerDriver::escapeFileName(
+        QFileInfo(cnf->remote_script).fileName());
+
+    if (fwbscript.indexOf(":")!=-1) fwbscript = fwbscript.section(':', 1, 1);
+
+    if (fwbdebug)
+    {
+        qDebug() << "Macro substitutions:";
+        qDebug() << "  $fwdir=" << cnf->fwdir;
+        qDebug() << "  cnf->script=" << cnf->script;
+        qDebug() << "  cnf->remote_script=" << cnf->remote_script;
+        qDebug() << "  $fwscript=" << fwbscript;
+    }
+
+    conf->setVariable("fwbprompt", fwb_prompt);
+    conf->setVariable("fwdir", cnf->fwdir);
+    conf->setVariable("fwscript", fwbscript);
+
+    conf->setVariable("rbtimeout", cnf->rollbackTime);
+    conf->setVariable("rbtimeout_sec", cnf->rollbackTime * 60);
+}
+
 
 /*
  * Takes destination directory defined in the configlet (or XML
